# linespec

./: .dockerignore  .gitignore  .goreleaser.yml  .linespec.yml  AGENTS.md  CHANGELOG.md  Dockerfile.linespec  IMPROVEMENT_PLAN.md  LICENSE  LINESPEC.md  LineSpec.Dockerfile  Makefile  OPTIMIZATION_1_ELIMINATE_TRANSPARENT_MODE.md  OPTIMIZATION_2_WAITTCP_PLAN.md  OPTIMIZATION_3_HARD_CODED_SLEEPS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_INVESTIGATION.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STATUS.md  PROVENANCE_RECORDS.md  PROVENANCE_RECORD_SCHEMA.md  PROXY_DEBUG.md  README.md  RELEASE_PLAN.md  ROADMAP.md  USER_SERVICE_FIXES.md  go.mod  go.sum  openapi-example.yaml  package-lock.json  package.json  registry-get_notification_not_found.json  tsconfig.json
.claude/: settings.json
.opencode/: tsconfig.json
docs/: AGENTS.md  CNAME  LINESPEC.md  README.md  _config.yml  docs.html  index.html  linespec.html  provenance.html
examples/order-service/: .linespec.yml  Cargo.toml  Dockerfile  init.sql
examples/order-service/src/: main.rs
linespec-tests/: mocks.yaml
notification-linespecs/: get_notification_not_found.linespec  get_notification_success.linespec  list_notifications_success.linespec  list_notifications_unauthenticated.linespec
notification-service/: docker-compose.yml
openapi/: todo-api-openapi.yaml
provenance/: prov-2026-001.yaml  prov-2026-001.yml  prov-2026-002.yaml  prov-2026-002.yml  prov-2026-003.yaml  prov-2026-003.yml  prov-2026-004.yaml  prov-2026-004.yml  prov-2026-005.yaml  prov-2026-005.yml  prov-2026-006.yaml  prov-2026-006.yml  (+39 more)
src/: cli.ts  (+10 more)
(+374 files in other folders)
