[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.6.20"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "=1.34", features = ["full"] }
tokio-postgres = { version = "=0.7.8", features = ["with-uuid-1", "with-chrono-0_4"] }
tower = "=0.4.13"
tower-http = { version = "=0.4.4", features = ["cors", "trace"] }
serde = { version = "=1.0.190", features = ["derive"] }
serde_json = "=1.0.108"
uuid = { version = "=1.5.0", features = ["v4", "serde"] }
chrono = { version = "=0.4.31", features = ["serde"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
